# Cogni-Sim-Robot-Brain

.github/workflows/: ci.yml
CogniSeer1.0-main/: .gitignore  DEPLOYMENT.md  Makefile  README.md  app_config.py  artifact_metadata.py  benchmark_torch_brain.py  brain_torch.py  data_pipeline.py  edge_robot_brain.py  edge_runtime.py  environment.yml  observability.py  pyproject.toml  quantize_brain.py  requirements.txt  resonance_core.py  ros2_robot_brain_node.py  torch_edge_robot_brain.py  train_brain.py
CogniSeer1.0-main/cogniseer_robot_brain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CogniSeer1.0-main/config/: defaults.json
CogniSeer1.0-main/datasets/raw/: robot_telemetry.jsonl
CogniSeer1.0-main/robot_brain_ros2/: package.xml  setup.cfg  setup.py
CogniSeer1.0-main/robot_brain_ros2/robot_brain_ros2/: edge_runtime.py  ros2_robot_brain_node.py  safety_layer.py  sensor_adaptor.py
CogniSeer1.0-main/scripts/: bootstrap_smoke_bundle.py  deployment_smoke_test.py  safety_layer_unit_test.py
CogniSeer1.0-main/tests/: test_export_load.py  test_integration_pipeline_export_smoke.py  test_regression_data_pipeline.py  test_unit_safety_layer.py
robot_ws/src/robot_brain_stack/: package.xml  setup.cfg  setup.py
robot_ws/src/robot_brain_stack/config/: brain_params.yaml  nav2_params.yaml
robot_ws/src/robot_brain_stack/launch/: brain_stack.launch.py  nav2_stack.launch.py  sim_world.launch.py  slam_localization.launch.py
robot_ws/src/robot_brain_stack/resource/: robot_brain_stack
robot_ws/src/robot_brain_stack/src/robot_brain_stack/: __init__.py  bt_executor.py  executive_context.py  failure_injection.py  goal_manager.py  health_monitor.py  mission_types.py  object_memory.py  recovery_manager.py  safety_layer.py  utils.py  watchdog.py
robot_ws/src/robot_brain_stack/tests/: test_failure_injection.py
robot_ws/src/robot_brain_stack/worlds/: brain_stack_world.world
