<?xml version="1.0"?>
<package format="3">
  <name>robot_brain_ros2</name>
  <version>0.1.0</version>
  <description>CogniSeer edge robot brain — ROS2 node that runs an INT8-quantized PyTorch brain model and publishes safe velocity commands to /cmd_vel.</description>
  <maintainer email="anthonyrenecastro-create@users.noreply.github.com">anthonyrenecastro-create</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
